applications/F5/nginx-instance/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gogs-ingress
  namespace: gogs-helm
spec:
  ingressClassName: nginx
  rules:
    - host: '*.apps.ocp1.redhat.hpecic.net'
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: gogs
                port:
                  number: 3000
